[WebRTC] Ignore -Wthread-safety-reference-return warnings in libwebrtc headers <https://bugs.webkit.org/show_bug.cgi?id=278436> <rdar://134381989>

Reviewed by Youenn Fablet.

Ignore -Wthread-safety-reference-return warnings using pragmas.  Fixing
these properly is tracked by Bug 274536.

* Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.h:
* Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCObservers.h:
* Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCStatsCollector.h:
* Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:
* Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProvider.h:
* Source/WebCore/testing/MockLibWebRTCPeerConnection.h:
* Source/WebKit/WebProcess/Network/webrtc/LibWebRTCProvider.cpp:

Canonical link: https://commits.webkit.org/282595@main