Source/WebKit/WebProcess/Network/webrtc/LibWebRTCProvider.cpp
@@ -45,7 +45,10 @@
 
 ALLOW_COMMA_BEGIN
 
+// See Bug 274508: Disable thread-safety-reference-return warnings in libwebrtc
+IGNORE_CLANG_WARNINGS_BEGIN("thread-safety-reference-return")
 #include <webrtc/pc/peer_connection_factory.h>
+IGNORE_CLANG_WARNINGS_END
 
 ALLOW_COMMA_END
 
